# DataMiningFinalProject

./: .env.example  .gitignore  CLAUDE.md  README.md  evals.md  hyperparameters_updated.txt  main.py  plan.md  proposal.md  pyproject.toml  report_blueprint.md  report_evid_meaningfullness.txt  report_evidence_of_meaningfulness.md  report_rubric.md  requirements-eval.txt  requirements-training.txt  requirements.txt  summary.md  training.md  wsl_test.txt
configs/: debug.yaml  default.yaml  eval.yaml  full.yaml  rl.yaml  sft.yaml  small.yaml  vllm.yaml
docker/: Dockerfile.sandbox  docker-compose.yml  server.py
docs/: flow.md
evals/eval_google_gemma-3-4b_20251204_122918/: results.json
evals/eval_gpt-5-mini_20251207_130103/: summary.json
evals/eval_gpt-5-mini_20251207_130416/: summary.json
evals/eval_gpt-5_20251207_130812/: summary.json
evals/eval_gpt-5_20251207_131054/: summary.json
evals/eval_gpt-5_20251207_131157/: summary.json
evals/eval_gpt-5_20251207_131358/: summary.json
evals/eval_gpt-5_20251207_132250/: summary.json
evals/eval_gpt-5_20251207_133052/: summary.json
evals/eval_gpt-5_20251207_133921/: summary.json
evals/eval_gpt-5_20251207_134447/: summary.json
evals/eval_gpt-5_20251207_134758/: summary.json
evals/eval_qwen3-4b-instruct-2507@f16_20251204_113921/: results.json
evals/eval_qwen_qwen3-1.7b_20251207_121750/: summary.json
evals/eval_qwen_qwen3-4b-instruct-2507_20251207_103701/: results.json
evals/eval_qwen_qwen3-4b-instruct-2507_20251207_103938/: summary.json
evals/eval_sft_20251207_161604/: summary.json
evals/eval_sft_20251207_212255/: summary.json
example_trajectories/failed/: q001_rollout01.jsonl  q009_rollout01.jsonl  q029_rollout02.jsonl  q211_rollout01.jsonl  q321_rollout01.jsonl
example_trajectories/successful/: q052_rollout01.jsonl  q064_rollout03.jsonl  q073_rollout02.jsonl  q109_rollout01.jsonl  q127_rollout02.jsonl  (+5 more)
report/: 01_team_members.md  02_project_overview.md  03_input_data.md  04_problem.md  05_evidence_of_success.md  06_evidence_of_meaningfulness.md  07_conclusions.md  08_appendix.md  main.md
scripts/: eval.py  plot_metrics.py  prepare_sft_data.py  rebuild_docker.py  run_environment.py  run_llamacpp.py  run_vllm.py  setup_chroma.py  setup_environment.py  test_environment.py  test_flash_attn.py  test_sandbox.py  train.py  train_sft.py
sft/: manifest.json  traj_0000.json  traj_0001.json  traj_0002.json  traj_0003.json  traj_0004.json  traj_0005.json  traj_0006.json  traj_0007.json  traj_0008.json  traj_0009.json  traj_0010.json  traj_0011.json  traj_0012.json  traj_0013.json  traj_0014.json  traj_0015.json  traj_0016.json  traj_0017.json  traj_0018.json  traj_0019.json  traj_0020.json  traj_0021.json  traj_0022.json  traj_0023.json  traj_0024.json  traj_0025.json  traj_0026.json  traj_0027.json  traj_0028.json  traj_0029.json  traj_0030.json  traj_0031.json  traj_0032.json  traj_0033.json  traj_0034.json  traj_0035.json  traj_0036.json  traj_0037.json  traj_0038.json  (+42 more)
src/: __init__.py  config.py  embeddings.py  environment.py  judge.py  llm_logger.py
tests/: __init__.py  test_agent.py  test_parsing.py  test_sandbox.py
(+970 files in other folders)
