[project]
name = "datamining2025"
version = "0.1.0"
description = "Efficient programmatic search using Small Language Models with Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Minimal base - use requirements-*.txt for full installs
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
